# gentle

./: .bumpversion.cfg  .drone.yml  .gitignore  README.md  pyproject.toml  tox.ini
docs/: conf.py  contributing.rst  index.rst  reference.rst  release-notes.rst
docs/api/: gentle.utils.rst
gentle/: __init__.py  __main__.py
gentle/generators/: __init__.py  autoconf.py  cargo.py  cpan.py  gemspec.py  nuspec.py  pear.py  pom.py  pyproject.py  shards.py
gentle/generators/python/: __init__.py  pyproject.py
gentle/metadata/: __init__.py  types.py  utils.py
gentle/pms/: __init__.py  portagepm.py
tests/: conftest.py
tests/autoconf/autoconf/: metadata.xml
tests/autoconf/libsecp256k1/: configure  metadata.xml
tests/cargo/: test_generator.py
tests/cargo/lemmy/: Cargo.toml.license
tests/generators/cargo/: test_generator.py
tests/generators/pyproject/: test_generator.py
tests/generators/shards/: test_generator.py
tests/hpack/stack/: package.yaml.license
tests/pear/: test_generator.py
tests/pear/pear/: metadata.xml  package2.xml.license
tests/pear/pecl-redis/: metadata.xml  package.xml.license
tests/pom/maven/: metadata.xml
tests/pubspec/: test_generator.py
tests/pyproject/: test_generator.py
tests/python/pkg_info/mkdocs-material/: metadata.xml
tests/python/setuptools/django/: metadata.xml
tests/python/wheel/: test_generator.py
tests/shards/: test_generator.py
