# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2022-2023 Anna <cyber@sysrq.in>

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gentle"
authors = [
    {name = "Anna", email = "cyber@sysrq.in"}
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["portage"]

[project.optional-dependencies]
# Cargo.toml, pyproject.toml, ...
toml = ["tomli; python_version <= '3.11'"]
# shard.yml
yaml = ["PyYAML"]

test = ["pytest"]
doc = ["sphinx", "insipid-sphinx-theme"]

[project.scripts]
gentle = "gentle.__main__:main"

[project.urls]
Home = "https://gentle.sysrq.in"
Source = "https://git.sysrq.in/gentle"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
